--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -2,5 +2,5 @@
 
 {% block title %}{{ tr('page_not_found_title') }}{% endblock %}
 
-{% block image %}{{ asset('images/error/404.gif') }}{% endblock %}
+{% block image %}{{ asset('images/error/clanger_error.gif') }}{% endblock %}
 {% block pagenote %}{{ tr('page_not_found_note') }}{% endblock %}
