--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,19 +8,20 @@
     <meta name="theme-color" content="{{ branding.getColours().highlight.bg|default('#2B2B2B') }}">
 
     {#- Facebook pages that are allowed to edit FB preview titles and descriptions -#}
-    <meta property="fb:pages" content="{{ meta_context.getBBCFacebookPageIds() }}">
+    <meta property="fb:pages" content="{{ page_context.getBBCFacebookPageIds() }}">
     <meta property="og:site_name" content="BBC">
 
     {#- Twitter-specific tags -#}
     <meta name="twitter:card" content="summary_large_image">
 
-    {% if meta_context.isPreview() %}
+    {% if page_context.isPreview() %}
         <meta name="robots" content="noindex,nofollow">
     {% endif %}
 
     {#- OpenGraph tags for Facebook/Twitter -#}
     {% block social_tags %}
         <meta property="og:title" content="{{ block('title') }}">
+        <meta property="og:url" content="{{ page_context.getCanonicalUrl() }}" />
     {% endblock %}
 
     {% block social_type %}
@@ -64,10 +65,6 @@
                     }
                 }
             });
-
-            window.bbcBlogs = {
-                "counterName" : "{{ istats_counter_name }}"
-            }
     </script>
 </head>
 <body>
