--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}Internal server error{% endblock %}
 
+{% block social_tags %}{% endblock %}
+{% block social_type %}{% endblock %}
+{% block social_image_tags %}{% endblock %}
+{% block social_description %}{% endblock %}
+{% block card_tags %}{% endblock %}
 {% block body %}
     <div class="grid-wrapper">
         <div class="grid 2/3@bpb2 2/3@bpw">
