--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -8,7 +8,7 @@
     <meta property="og:type" content="article">
 {% endblock %}
 
-{% block social_tags %}
+{% block card_tags %}
     <meta name="twitter:card" content="summary">
 
     {# BLOG #}
@@ -21,14 +21,9 @@
 
     {# POST #}
     <meta name="twitter:title" content="{{ post.getTitle() }}">
+    <meta name="twitter:description" content="{{ page_metadata.getDescription() }}">
     <meta property="og:title" content="{{ post.getTitle() }}" />
     <meta property="article:published_time" content="{{ post.getDisplayDate() | date(constant('DATE_W3C')) }}" />
-    <meta property="og:url" content="{{ url('post', {blogId: blog.getId(), guid: post.getGuid()}) }}" />
-
-    {%- if post.getShortSynopsis() -%}
-        <meta name="twitter:description" content="{{ post.getShortSynopsis() }}">
-        <meta property="og:description" content="{{ post.getShortSynopsis() }}" />
-    {%- endif -%}
 
     {# AUTHOR SOCIAL #}
     {%- set author = post.getAuthor() -%}
@@ -42,14 +37,6 @@
         {%- if author.getSocial().getTwitterUsername() -%}
             <meta name="twitter:creator" content="{{ author.getSocial().getTwitterUsername() }}">
         {%- endif -%}
-    {%- endif -%}
-{% endblock %}
-
-{% block social_image_tags %}
-    {%- if post.getImage() -%}
-        <meta property="og:image" content="{{ post.getImage().getUrl(1200,675) }}" />
-    {%- else -%}
-        {{ parent() }}
     {%- endif -%}
 {% endblock %}
 
@@ -127,7 +114,7 @@
 
         {%- if comments -%}
             {%- set commentsRoutingParameters = {blogId: blog.getId(), guid: post.getGuid()} -%}
-            {%- if meta_context.isPreview() -%}
+            {%- if page_metadata.isPreview() -%}
                 {%- set commentsRoutingParameters = commentsRoutingParameters|merge({'preview': 'true'}) -%}
             {%- endif -%}
             <div class="lazy-module" data-lazyload-inc="{{ url('comments_partial', commentsRoutingParameters) }}" data-lazyload-delay="true">
