[BLOGS-1413] Publisher events (#166)

--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -56,19 +56,22 @@
             {#no spaces in here#}
             {%- if prevPost is not empty -%}
                 <li class="br-keyline">{#--#}
-                    <a data-istats-link-location="blogs_post_top_previous"
-                       href="{{ path('post', {blogId: blog.getId(), guid: prevPost.getGuid() }) }}">
+                    <a data-bbc-container="{{ blog.getId() }}"
+                        data-bbc-title="header-previous-post"
+                        href="{{ path('post', {blogId: blog.getId(), guid: prevPost.getGuid() }) }}">
                         {{ tr('link_previous') }}{#--#}
                     </a>{#--#}
                 </li>{#--#}
             {%- endif -%}
             <li class="br-keyline">{#--#}
-                <a data-istats-link-location="blogs_top_home"
+                <a data-bbc-container="{{ blog.getId() }}"
+                   data-bbc-title="header-home"
                    href="{{ path('blog', {blogId: blog.getId()}) }}">{{ tr('link_home') }}</a>{#--#}
             </li>{#--#}
             {%- if nextPost is not empty -%}
                 <li class="br-keyline">{#--#}
-                    <a data-istats-link-location="blogs_post_top_next"
+                    <a data-bbc-container="{{ blog.getId() }}"
+                       data-bbc-title="header-next-post"
                        href="{{ path('post', {blogId: blog.getId(), guid: nextPost.getGuid() }) }}">{#--#}
                         {{ tr('link_next') }}{#--#}
                     </a>{#--#}
@@ -148,8 +151,7 @@
         </div>
         <div class="grid 2/3@bpw2 2/3@bpe">
             <h4 class="delta no-margin">
-                <a data-istats-link-location="{{ istatsLocation }}"
-                   href="{{ path('post', {blogId: blogId, guid: post.getGuid() }) }}">
+                <a href="{{ path('post', {blogId: blogId, guid: post.getGuid() }) }}" data-bbc-container="{{ blogId }}" data-bbc-title="more-posts">
                     {{ post.getTitle() }}
                 </a>
             </h4>
