--- a/src/Ds/Post/SocialBar/social_bar.html.twig
+++ b/src/Ds/Post/SocialBar/social_bar.html.twig
@@ -1,5 +1,6 @@
 <div class="islet--vertical text--shout">
-    <a class="blogscomments-link" href="{{ path('post', {blogId: social_bar.getBlogId(), guid: social_bar.getGuid()}) }}#comments" data-bbc-container="{{ social_bar.getBlogId() }}" data-bbc-title="post-comments">
+    <a class="blogscomments-link" href="{{ path('post', {blogId: social_bar.getBlogId(), guid: social_bar.getGuid()}) }}#comments"
+       data-bbc-container="{{ social_bar.getBlogId() }}" data-bbc-title="{{ social_bar.getOption('is_featured_post') ? 'featured-' : '' }}post-comments">
         {{ gelicon('basics', 'comments', 'gelicon--text-base gelicon--comments') }}
         {{ tr('link_comments') }}
     </a>
