--- a/src/Ds/Post/PostSummary/post_summary.html.twig
+++ b/src/Ds/Post/PostSummary/post_summary.html.twig
@@ -17,9 +17,6 @@
     <div class="media islet--vertical">
         {% if post_summary.shouldShowImage() %}
             <a
-                {% if post_summary.isFeaturedPost() %}
-                    data-istats-link-location="blogs_featured_post"
-                {% endif %}
                 href="{{ path('post', {blogId: post_summary.getBlogId(), guid: post_summary.getPost().getGuid() }) }}">
                 <img class="1/3 media__img" src="{{ post_summary.getPost().getImage().getUrl(192,108) }}"
                      alt="{{ post_summary.getPost.getTitle() }}"/>
@@ -30,7 +27,7 @@
                 <p>{{ post_summary.getPost().getShortSynopsis() }}</p>
             {% endif %}
             <p>
-                <a
+                <a  data-link="read-more"
                     data-bbc-container="{{ post_summary.getBlogId() }}" data-bbc-title="post-read-more"
                     href="{{ path('post', {blogId: post_summary.getBlogId(), guid: post_summary.getPost().getGuid() }) }}">{{ tr('link_read_more') }}</a>
             </p>
