--- a/src/Ds/Author/AuthorSummary/author_summary.html.twig
+++ b/src/Ds/Author/AuthorSummary/author_summary.html.twig
@@ -1,4 +1,4 @@
-<a rel="author" href="{{ path('author_show', {blogId: author_summary.getBlogId(), guid: author_summary.getAuthor().getGuid()}) }}" data-istats-link-location="blogs_global_author">
+<a rel="author" href="{{ path('author_show', {blogId: author_summary.getBlogId(), guid: author_summary.getAuthor().getGuid()}) }}">
     <div class="grid-wrapper">
         <div class="grid 1/3 1/1@bpw">
             {{- ds('image', author_summary.getAuthor().getImage(), 196, {770: 1/3, 1008: '196px'}) -}}
