--- a/templates/comments/index.html.twig
+++ b/templates/comments/index.html.twig
@@ -10,6 +10,9 @@
     {%- endif -%}
 
     {{ parent() }}
+
+    {% include 'comments/comments_styling.html.twig' with { 'colours': colours } only %}
+
 {% endblock %}
 
 {% block body %}
