--- a/templates/comments/partial.html.twig
+++ b/templates/comments/partial.html.twig
@@ -1,4 +1,6 @@
 <div>
+    {% include 'comments/comments_styling.html.twig' with { 'colours': colours } only %}
+
     {%- if comments -%}
         <div class="component comments-section" id="comments">
             {{ comments.getBody()|raw }}
