--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -48,6 +48,8 @@
     {%- endif -%}
 
     {{ parent() }}
+
+    {% include 'comments/comments_styling.html.twig' with { 'colours': branding.colours } only %}
 {% endblock %}
 
 {%- block content -%}
