--- a/templates/comments/index.html.twig
+++ b/templates/comments/index.html.twig
@@ -11,7 +11,7 @@
 
     {{ parent() }}
 
-    {% include 'comments/comments_styling.html.twig' with { 'colours': colours } only %}
+    {% include 'comments/comments_styling.html.twig' with { 'colours': branding.colours } only %}
 
 {% endblock %}
 
