--- a/templates/comments/partial.html.twig
+++ b/templates/comments/partial.html.twig
@@ -1,3 +1,4 @@
+{# NB check the parent template also includes comments_styling.html.twig #}
 <div>
     {%- if comments -%}
         <div class="component comments-section" id="comments">
