--- a/src/Ds/Core/Module/_comments.scss
+++ b/src/Ds/Core/Module/_comments.scss
@@ -1,3 +1,11 @@
+.comments-section a {
+    &:hover,
+    &:active,
+    &:focus {
+        color: #000000;
+    }
+}
+
 .comments-section ul,
 .comments-section li {
     list-style: none outside none;
