[BLOGS-1424] Fix blogs comments link highlighting issue (#180)

--- a/src/Ds/Core/Module/_comments.scss
+++ b/src/Ds/Core/Module/_comments.scss
@@ -20,4 +20,10 @@ div.comments {
     .lazy-module--complete & h4.comments__heading-module-title {
         display: none;
     }
+
+    // GIANT HACK TO FIX BRANDING CHANGING THE LINK COLOUR
+    .comment__text a:hover {
+        color: #006def;
+    }
 }
+
